fixed export button alignment

--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -211,6 +211,10 @@ a.usa-button--unstyled:visited {
     align-items: center;
 }
 
+.usa-button--justify-right {
+  justify-content: right;
+}
+
 
 .dotgov-table a,
 .usa-link--icon {
